<resources>
    <string name="app_name">FillMe</string>
    <string name="str_TitleActualMileage">Kilometerstand:</string>
    <string name="str_TitleLastEntry">Letzer Eintrag:</string>
    <string name="str_TitleActualConsumption">Verbrauch:</string>
    <string name="str_TitleConsumptionCost">Kosten:</string>
    <string name="str_TitleTotalConsumption">Gesamtverbrauch:</string>
    <string name="str_TitleTotalConsumptionCost">Gesamtkosten:</string>

    <string name="str_newEntry">Neuer Eintrag</string>
    <string name="str_changeEntry">Eintrag bearbeiten</string>
    <string name="str_showEntry">Einträge einsehen</string>
    <string name="str_DataLastFill">Letzter Tank</string>
    <string name="str_DataLastMonth">Dieser Monat</string>
    <string name="str_DataLastYear">Dieses Jahr</string>

    <!-- Unit strings -->
    <string name="str_UnitMileage">km</string>
    <string name="str_UnitPrice">Euro</string>
    <string name="str_UnitAmount">Liter</string>
    <string name="str_UnitEuro">€</string>
    <string name="str_UnitLiter">l</string>
    <string name="str_UnitActualConsumption">l pro 100 km</string>
    <string name="str_UnitConsumptionCost">€ pro 100 km</string>
    <string name="str_UnitTotalConsumption">l pro 100 km</string>
    <string name="str_UnitTotalConsumptionCost">€ pro 100 km</string>
    <string name="str_NumberSeparator">.</string>

    <!-- Calendar strings -->
    <string name="str_monday_full">Montag</string>
    <string name="str_tuesday_full">Dienstag</string>
    <string name="str_wednesday_full">Mittwoch</string>
    <string name="str_thursday_full">Donnerstag</string>
    <string name="str_friday_full">Freitag</string>
    <string name="str_saturday_full">Samstag</string>
    <string name="str_sunday_full">Sonntag</string>
    <string name="str_monday_short">Mo.</string>
    <string name="str_tuesday_short">Di.</string>
    <string name="str_wednesday_short">Mi.</string>
    <string name="str_thursday_short">Do.</string>
    <string name="str_friday_short">Fr.</string>
    <string name="str_saturday_short">Sa.</string>
    <string name="str_sunday_short">So.</string>

    <!-- Titles -->
    <string name="str_newEntry_title">Eintrag hinzufügen</string>
    <string name="str_showEntries_title">Einträge anzeigen</string>
    <string name="str_settings_title">Einstellungen</string>

    <string name="str_headlineNewEntry">Neuer Eintrag</string>
    <string name="str_pickDate">auswählen</string>
    <string name="str_date">Datum</string>
    <string name="str_Mileage">Kilometerstand</string>
    <string name="str_amount">Betrag</string>
    <string name="str_liter">Liter</string>
    <string name="str_back">zurück</string>
    <string name="str_accept">bestätigen</string>
    <string name="str_save">speichern</string>
    <string name="str_delete">löschen</string>

    <string name="str_headline_newEntry_date">Wann hast Du getankt?</string>
    <string name="str_headline_newEntry_mileage">Was sagt der Zähler?</string>
    <string name="str_headline_newEntry_price">Was hast Du gezahlt?</string>
    <string name="str_headline_newEntry_liter">Wie viel hast du getankt?</string>

    <!-- Button strings -->
    <string name="str_yes">JA</string>
    <string name="str_no">NEIN</string>
    <string name="str_ok">OK</string>
    <string name="str_confirm">Bestätigen</string>
    <string name="str_cancel">Abbrechen</string>
    <string name="str_description_btn_cancel">Zurück</string>

    <!-- Menu Strings -->
    <string name="str_menu_headline_welcome">Willkommen zurück!</string>
    <string name="str_menu_newEntry_btn_description">Neuen Eintrag erstellen</string>
    <string name="str_menu_settings_btn_description">Einstellungen öffnen</string>
    <string name="str_menu_vom">vom</string>
    <string name="str_menu_statistic_title">Übersicht</string>
    <string name="str_menu_lastActivity_title">Letzte Aktivitäten</string>
    <string name="str_menu_unit_consumption">Liter/100km</string>
    <string name="str_menu_unit_literPrice">Euro/Liter</string>
    <string name="str_menu_graphic_status_description">Grafische Anzeige</string>
    <string name="str_menu_average_icon_desciription">Durchschnitt Grafik</string>

    <!-- New Entry Strings -->
    <string name="str_newEntry_dateTitle">Datum:</string>
    <string name="str_newEntry_dateToday">Heute</string>
    <string name="str_newEntry_dateSelect">Kalender</string>
    <string name="str_newEntry_mileageTitle">Kilometerstand:</string>
    <string name="str_newEntry_literPriceTitle">Literpreis:</string>
    <string name="str_newEntry_fullPriceTitle">Gesamtpreis:</string>
    <string name="str_newEntry_literTitle">Liter:</string>
    <string name="str_counter_1">1</string>
    <string name="str_counter_2">2</string>
    <string name="str_counter_3">3</string>
    <string name="str_counter_4">4</string>

    <!-- Setting Strings -->
    <string name="str_settings_menuDisplay_title">Menü Anzeige</string>
    <string name="str_settings_menuDisplay_changeStatistic">Statistik in der Übersicht:</string>
    <string name="str_settings_menuDisplay_lastActivityNumber">Anzahl letzte Aktivitäten:</string>
    <string name="str_settings_addEntry_title">Dateneintrag</string>
    <string name="str_settings_addEntry_literFormat">Litereingabe:</string>
    <string name="str_settings_addEntry_literFormat_literPrice">Literpreis</string>
    <string name="str_settings_addEntry_literFormat_fullPrice">Gesamtpreis</string>
    <string name="str_settings_addEntry_literFormat_both">Beides</string>
    <string name="str_settings_dataExportImport_title">Daten export/import</string>
    <string name="str_settings_dataExportImport_overwriteData">Daten überschreiben</string>
    <string name="str_exportData">Daten exportieren</string>
    <string name="str_importData">Daten importieren</string>
</resources>
