<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.me.fill.mblum.android.fillme.EditEntryActivity">

    <TextView
        android:id="@+id/tv_headlineChangeEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/str_changeEntry"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/tv_titleDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_date"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_headlineChangeEntry"
        android:layout_marginStart="12dp" />

    <TextView
        android:id="@+id/tv_Date"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_SelectDate"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleDate" />

    <TextView
        android:id="@+id/tv_TitleMileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/str_Mileage"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_Date" />

    <EditText
        android:id="@+id/put_Mileage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorLink="@android:color/holo_blue_bright"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_TitleMileage"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/tv_UnitMileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/str_UnitMileage"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_TitleMileage"
        android:layout_marginEnd="15dp" />

    <TextView
        android:id="@+id/tv_TitleAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/str_amount"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/put_Mileage"
        android:layout_marginStart="12dp" />

    <TextView
        android:id="@+id/tv_UnitAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/str_UnitEuro"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_TitleAmount"
        android:layout_marginEnd="15dp" />

    <EditText
        android:id="@+id/put_Amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_TitleAmount"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp" />

    <TextView
        android:id="@+id/tv_TitleLiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:text="@string/str_liter"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/put_Amount" />

    <TextView
        android:id="@+id/tv_UnitLiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/str_UnitLiter"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_TitleLiter"
        android:layout_marginEnd="15dp" />

    <EditText
        android:id="@+id/put_Liter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_TitleLiter"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp" />

    <Button
        android:id="@+id/btn_SelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/str_pickDate"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleDate"
        android:layout_marginEnd="12dp" />

    <Button
        android:id="@+id/btn_accept"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/str_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/str_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_accept" />

</android.support.constraint.ConstraintLayout>
