<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundGray"
    android:orientation="vertical"
    tools:context="de.me.fill.mblum.android.fillme.NewEntryActivity">

    <!-- Header Area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_small"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:paddingTop="15sp"
            android:text="@string/str_newEntry_title"
            android:textAlignment="center"
            android:textColor="@color/colorTitle"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btn_newEntry_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/str_description_btn_cancel"
            android:paddingBottom="10sp"
            app:srcCompat="@drawable/cancel_button" />
    </LinearLayout>

    <!-- Date Area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="12sp"
        android:layout_marginBottom="0sp"
        android:background="@drawable/radius_layout_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:layout_margin="8sp"
            android:background="@drawable/radius_layout_rounded"
            android:gravity="center"
            android:text="@string/str_counter_1"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="45sp"
                    android:gravity="center_vertical"
                    android:labelFor="@id/btn_newEntry_date_select"
                    android:text="@string/str_newEntry_dateTitle"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_newEntry_selected_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="20sp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="12sp">

                <Button
                    android:id="@+id/btn_newEntry_date_today"
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:background="@drawable/radius_layout_button"
                    android:text="@string/str_newEntry_dateToday"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btn_newEntry_date_select"
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:layout_marginStart="12sp"
                    android:background="@drawable/radius_layout_button"
                    android:text="@string/str_newEntry_dateSelect"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- Mileage Area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="12sp"
        android:layout_marginBottom="0sp"
        android:background="@drawable/radius_layout_bg"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8sp">

            <TextView
                android:layout_width="45sp"
                android:layout_height="45sp"
                android:background="@drawable/radius_layout_rounded"
                android:gravity="center"
                android:text="@string/str_counter_2"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8sp"
            android:paddingBottom="8sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:gravity="center_vertical"
                android:labelFor="@id/input_newEntry_mileage"
                android:text="@string/str_newEntry_mileageTitle"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/input_newEntry_mileage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorLink="@android:color/holo_blue_bright"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <!-- Price Area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="12sp"
        android:layout_marginBottom="0sp"
        android:background="@drawable/radius_layout_bg"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8sp">

            <TextView
                android:layout_width="45sp"
                android:layout_height="45sp"
                android:background="@drawable/radius_layout_rounded"
                android:gravity="center"
                android:text="@string/str_counter_3"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8sp"
            android:paddingBottom="8sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:gravity="center_vertical"
                android:labelFor="@id/input_newEntry_cost"
                android:text="@string/str_newEntry_costTitle"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/input_newEntry_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColorLink="@android:color/holo_blue_bright"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <!-- Liter Area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="12sp"
        android:layout_marginBottom="0sp"
        android:background="@drawable/radius_layout_bg"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8sp">

            <TextView
                android:layout_width="45sp"
                android:layout_height="45sp"
                android:background="@drawable/radius_layout_rounded"
                android:gravity="center"
                android:text="@string/str_counter_4"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8sp"
            android:paddingBottom="8sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:gravity="center_vertical"
                android:labelFor="@id/input_newEntry_liter"
                android:text="@string/str_newEntry_literTitle"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/input_newEntry_liter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColorLink="@color/colorPrimaryText"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_newEntry_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_confirm"
        android:layout_margin="15sp"
        android:background="@drawable/radius_layout_rounded"/>
</android.support.v7.widget.LinearLayoutCompat>
