<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_newEntry_complete"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    android:orientation="vertical"
    tools:context="de.me.fill.mblum.android.fillme.NewEntryPriceActivity">

    <!-- Header Area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35sp"
        android:orientation="horizontal"
        android:paddingTop="12sp">

        <ImageButton
            android:id="@+id/btn_newEntryPrice_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:contentDescription="@string/str_description_btn_cancel"
            android:padding="18sp"
            app:srcCompat="@drawable/arrow_back_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription=""
            android:padding="8dp"
            app:srcCompat="@drawable/vector_price" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25sp"
        android:labelFor="@+id/editText_newEntry_price"
        android:paddingHorizontal="18sp"
        android:text="@string/str_headline_newEntry_price"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <NumberPicker
                android:id="@+id/numberPicker_newEntryPrice_euro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:theme="@style/Widget.Material.NumberPicker.Custom" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingTop="12sp"
                android:text="@string/str_NumberSeparator"
                android:textSize="32sp"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/numberPicker_newEntryPrice_cent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="0dp"
                android:theme="@style/Widget.Material.NumberPicker.Custom" />

            <NumberPicker
                android:id="@+id/numberPicker_newEntryPrice_hundredthCent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:theme="@style/Widget.Material.NumberPicker.HundredthCent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/str_UnitEuro"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_newEntryPrice_next"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_margin="30dp"
                android:background="@drawable/shape_round_button"
                android:contentDescription="Next Button"
                app:srcCompat="@drawable/arrow_next_white" />

        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
